# embedded-exercises

./: README.md  windows_installation.md
bonus_exercise_1_a_little_rust_in_cpp/: readme.md
bonus_exercise_1_a_little_rust_in_cpp/rust_calculator/: Cargo.toml
bonus_exercise_2_a_little_cpp_in_rust/: Cargo.toml  readme.md
bonus_exercise_2_a_little_cpp_in_rust/src/: cpp_calculator.rs
exercise_1_a_little_rust_in_cpp/: readme.md  rust_calculator.cpp
exercise_1_a_little_rust_in_cpp/rust_calculator/src/: lib.rs
exercise_1_heapless/: Cargo.toml  README.md
exercise_1_heapless/src/: a_ints.rs  b_strings.rs
exercise_2_a_little_cpp_in_rust/: build.rs  readme.md
exercise_2_a_little_cpp_in_rust/c_calculator/: c_calculator.cpp  c_calculator.h
exercise_2_a_little_cpp_in_rust/cpp_calculator/: cpp_calculator.cpp  cpp_calculator.h  cpp_calculator_wrapper.cpp  cpp_calculator_wrapper.h
exercise_2_a_little_cpp_in_rust/src/: c_calculator.rs  cpp_calculator.rs  main.rs
exercise_2_hello_embedded/: Cargo.toml  README.md
exercise_2_hello_embedded/.cargo/: config.toml
exercise_2_hello_embedded/src/: main.rs
exercise_3_embedded_graphics/: README.MD
exercise_3_embedded_graphics/core-application/: Cargo.toml
exercise_3_embedded_graphics/core-application/src/: lib.rs
exercise_3_embedded_graphics/desktop/: Cargo.toml
exercise_3_embedded_graphics/desktop/.cargo/: config.toml
exercise_3_embedded_graphics/desktop/run-wasm/: Cargo.toml
exercise_3_embedded_graphics/desktop/src/: lib.rs
exercise_3_embedded_graphics/esp32-s1-nostd/: Cargo.toml
exercise_3_embedded_graphics/esp32-s1-nostd/src/: main.rs
exercise_3_embedded_graphics_solution/esp32-s1/src/: main.rs
exercise_3_heapless/: README.md
exercise_3_heapless/src/: a_ints.rs  b_strings.rs
exercise_4_embedded_graphics/core-application/src/: lib.rs
exercise_4_embedded_graphics/esp32-s1/: Cargo.toml
exercise_4_embedded_graphics/esp32-s1/src/: main.rs
exercise_4_to_async_or_not_async/: .gitignore  Cargo.toml  README.md
exercise_4_to_async_or_not_async/src/: main.rs
