[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["run-wasm"]

[dependencies]
core-application = { path = "../core-application" }
console_error_panic_hook = "0.1.5"
chrono = "0.4.26"
wasm-bindgen = "0.2.45"
embedded-graphics = "0.8.0"
embedded-graphics-web-simulator = "0.4.0"
embedded-text = "0.7.2"
tinybmp = "0.6.0"
tinytga = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
futures = "0.3"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.4"