[package]
name = "esp32-s1-nostd"
version = "0.1.0"
edition = "2024"


[dependencies]
# local dependencies
core-application = {path = "../core-application"}

# remote dependencies
defmt = "1.0.1"
cfg-if = "1.0.0"
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embedded-io-async = "0.6.1"
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "acf3327fa3fd21205ddd1bc3be2cfce5de0d8020" ,features = [
    "panic-handler",
    "println",
    "esp32",
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", rev = "acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["esp32"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["esp32"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["defmt", "unstable", "esp32"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", rev = "acf3327fa3fd21205ddd1bc3be2cfce5de0d8020", features = ["defmt-espflash", "esp32"] }
embassy-embedded-hal = {version = "0.5" }
embedded-hal-bus = { version = "0.3", features = ["async"] }
embedded-graphics = "0.8"
mipidsi = { version = "0.9.0" }
display-interface-spi = { version = "0.5.0" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1
